--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,8 @@
         "setting" : {
             "urlCheck" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+		"lazyCodeLoading":"requiredComponents"
     },
     "vueVersion" : "3",
     "fallbackLocale" : "zh-Hans"
